update to prevent hold/fast click on mobile devices

--- a/style.css
+++ b/style.css
@@ -753,3 +753,14 @@ h1 {
      display: block;
      border-radius: inherit;
 }
+
+/* REQ TO PREVENT HOLD/FAST CLICK FROM HIGHLIGHTING ON MOBILE */
+
+.game-container,
+#miniGameCanvas {
+     touch-action: none;
+     user-select: none;
+     -webkit-user-select: none;
+     -webkit-touch-callout: none;
+     -webkit-tap-highlight-color: transparent;
+}
